public/css/app.css
/* ... */
@media (min-width: 640px) {

  .sm\:ml-0 {
    margin-left: 0px;
  }

  .sm\:block {
    display: block;
  }

  .sm\:h-20 {
    height: 5rem;
  }

  .sm\:items-center {
    align-items: center;
  }

  .sm\:justify-start {
    justify-content: flex-start;
  }

  .sm\:justify-between {
    justify-content: space-between;
  }

  .sm\:rounded-lg {
    border-radius: 0.5rem;
  }

  .sm\:px-6 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }

  .sm\:pt-0 {
    padding-top: 0px;
  }

  .sm\:text-left {
    text-align: left;
  }

  .sm\:text-right {
    text-align: right;
  }
}
@media (min-width: 768px) {

  .md\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .md\:place-self-center {
    place-self: center;
  }

  .md\:justify-self-end {
    justify-self: end;
  }

  .md\:border-t-0 {
    border-top-width: 0px;
  }

  .md\:border-l {
    border-left-width: 1px;
  }
}
@media (min-width: 1024px) {

  .btn.loading.btn-xl:before, .btn.loading.lg\:btn-lg:before {
    height: 1.25rem;
    width: 1.25rem;
  }

  .lg\:btn-lg {
    height: 4rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    min-height: 4rem;
    font-size: 1.125rem;
  }

  .btn-square:where(.lg\:btn-lg) {
    height: 4rem;
    width: 4rem;
    padding: 0px;
  }

  .btn-circle:where(.lg\:btn-lg) {
    height: 4rem;
    width: 4rem;
    border-radius: 9999px;
    padding: 0px;
  }

  .lg\:static {
    position: static;
  }

  .lg\:absolute {
    position: absolute;
  }

  .lg\:sticky {
    position: -webkit-sticky;
    position: sticky;
  }

  .lg\:top-0 {
    top: 0px;
  }

  .lg\:bottom-0 {
    bottom: 0px;
  }

  .lg\:z-10 {
    z-index: 10;
  }

  .lg\:-z-0 {
    z-index: 0;
  }

  .lg\:-z-10 {
    z-index: -10;
  }

  .lg\:col-span-4 {
    grid-column: span 4 / span 4;
  }

  .lg\:col-span-6 {
    grid-column: span 6 / span 6;
  }

  .lg\:col-span-3 {
    grid-column: span 3 / span 3;
  }

  .lg\:col-span-7 {
    grid-column: span 7 / span 7;
  }

  .lg\:col-span-2 {
    grid-column: span 2 / span 2;
  }

  .lg\:m-0 {
    margin: 0px;
  }

  .lg\:-m-5 {
    margin: -1.25rem;
  }

  .lg\:-m-10 {
    margin: -2.5rem;
  }

  .lg\:mx-auto {
    margin-left: auto;
    margin-right: auto;
  }

  .lg\:mx-0 {
    margin-left: 0px;
    margin-right: 0px;
  }

  .lg\:mt-4 {
    margin-top: 1rem;
  }

  .lg\:-mt-16 {
    margin-top: -4rem;
  }

  .lg\:-mt-14 {
    margin-top: -3.5rem;
  }

  .lg\:block {
    display: block;
  }

  .lg\:flex {
    display: flex;
  }

  .lg\:grid {
    display: grid;
  }

  .lg\:hidden {
    display: none;
  }

  .lg\:h-screen {
    height: 100vh;
  }

  .lg\:h-\[40vh\] {
    height: 40vh;
  }

  .lg\:h-\[50vh\] {
    height: 50vh;
  }

  .lg\:h-\[45vh\] {
    height: 45vh;
  }

  .lg\:w-\[40vw\] {
    width: 40vw;
  }

  .lg\:w-\[50vw\] {
    width: 50vw;
  }

  .lg\:max-w-xs {
    max-width: 20rem;
  }

  .lg\:basis-96 {
    flex-basis: 24rem;
  }

  .lg\:-translate-y-5 {
    --tw-translate-y: -1.25rem;
    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  }

  .lg\:-translate-y-12 {
    --tw-translate-y: -3rem;
    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  }

  .lg\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .lg\:grid-cols-10 {
    grid-template-columns: repeat(10, minmax(0, 1fr));
  }

  .lg\:grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }

  .lg\:flex-row {
    flex-direction: row;
  }

  .lg\:flex-col {
    flex-direction: column;
  }

  .lg\:items-center {
    align-items: center;
  }

  .lg\:justify-center {
    justify-content: center;
  }

  .lg\:gap-4 {
    gap: 1rem;
  }

  .lg\:rounded-xl {
    border-radius: 0.75rem;
  }

  .lg\:bg-white {
    --tw-bg-opacity: 1;
    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  }

  .lg\:p-0 {
    padding: 0px;
  }

  .lg\:p-4 {
    padding: 1rem;
  }

  .lg\:p-12 {
    padding: 3rem;
  }

  .lg\:p-2 {
    padding: 0.5rem;
  }

  .lg\:p-8 {
    padding: 2rem;
  }

  .lg\:px-8 {
    padding-left: 2rem;
    padding-right: 2rem;
  }

  .lg\:text-center {
    text-align: center;
  }

  .lg\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  .lg\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }

  .lg\:shadow-md {
    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  }
}
@media (min-width: 1280px) {

  .xl\:block {
    display: block;
  }
}

